# dice_game_flet

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.cspell/: custom-dictionary-workspace.txt
config/: tox.ini
dice_game_flet/: box.py  colors.py  component_type.py  game.py  main.py
