[tool.poetry]
name = "dados"
version = "0.1.0"
description = ""
authors = ["sorul <cromerovargas2d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flet = "^0.10.3"


[tool.poetry.group.dev.dependencies]
flake8-print = "^5.0.0"
flake8-builtins = "^2.2.0"
flake8-eradicate = "^1.5.0"
flake8-pie = "^0.16.0"
flake8-secure-coding-standard = "^1.4.1"
flake8-string-format = "^0.3.0"
flake8-unused-arguments = "^0.0.13"
flake8-warnings = "^0.4.1"
flake8-comprehensions = "^3.14.0"
flake8-literal = "^1.4.0"
flake8-multiline-containers = "^0.0.19"
flake8-newspaper-style = "^0.4.3"
flake8-annotations-complexity = "^0.0.8"
flake8-cognitive-complexity = "^0.1.0"
flake8-functions = "^0.0.8"
flake8-docstrings = "^1.7.0"
flake8-pytest-style = "^1.7.2"
flake8-pytest = "^1.4"
flake8-annotations = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
